...
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                        <size key="shadowOffset" width="0.0" height="0.0"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="ViewWithImage" label="ViewWithImage"/>
                                <constraints>
                                    <constraint firstItem="Qv2-Wu-zh5" firstAttribute="top" secondItem="eHF-pV-pbV" secondAttribute="top" constant="150" id="7XX-x1-pNN"/>
                                    <constraint firstItem="Y6y-t3-AKZ" firstAttribute="leading" secondItem="eHF-pV-pbV" secondAttribute="leading" id="Acd-ca-uoR"/>
                                    <constraint firstAttribute="bottom" secondItem="Y6y-t3-AKZ" secondAttribute="bottom" constant="20" symbolic="YES" id="PVy-Mh-X9U"/>
                                    <constraint firstItem="Qv2-Wu-zh5" firstAttribute="centerX" secondItem="eHF-pV-pbV" secondAttribute="centerX" id="YwU-Lf-3eV"/>
                                    <constraint firstItem="4tv-JR-CNT" firstAttribute="top" secondItem="Qv2-Wu-zh5" secondAttribute="bottom" constant="35" id="bet-tt-biy"/>
...
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="KPo-C2-Ahh">
                                                <rect key="frame" x="0.0" y="0.0" width="354" height="32"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="31" id="TPt-Qj-R85"/>
                                                </constraints>
                                                <segments>
                                                    <segment title="Farmer"/>
                                                    <segment title="Client"/>
                                                </segments>
                                                <color key="selectedSegmentTintColor" red="0.49121677879999998" green="0.68057274820000002" blue="0.80572980640000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </segmentedControl>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="FFj-gq-pWg">
...
                                    <constraint firstItem="QCH-ur-fqk" firstAttribute="leading" secondItem="4Z5-cg-SB2" secondAttribute="leading" constant="20" id="vnl-Ah-htY"/>
                                </constraints>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="ZAS-DV-fkH">
                                <rect key="frame" x="20" y="168" width="374" height="664"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account Selection" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zi1-FN-t3a">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7Hl-dk-qax">
...
