...
        
        setIdentifiers()
    }
    
    // Accessibility identifiers
    func setIdentifiers() {
        welcomeUserLabel.accessibilityIdentifier = "welcomeLabelIdentifier"
        myProfileButton.accessibilityIdentifier = "profileButtonIdentifier"
        addNewProduceButton.accessibilityIdentifier = "addNewProduceButtonIdentifier"
        produceOnSale.accessibilityIdentifier = "produceOnSaleButtonIdentifier"
    }
    
    // MARK: - Navigation
...
